# reverseengAutomation

./: .env.example  .gitignore  Dockerfile  check_full.py  check_result.py  debug_r2.py  docker-compose.yml  pyproject.toml  start.ps1  test_ai.py
api/: auth.py  main.py
api/database/: engine.py  orm_models.py
api/routers/: ai_router.py  analysis.py  auth_router.py  diagnostics.py  export.py  inspect.py  samples.py  tools.py  upload.py
cli/: main.py
core/: models.py
core/ai/: interpreter.py
core/analyzers/: archive_analyzer.py  auto_analyzer.py  binary_analyzer.py  firmware_analyzer.py
core/ingest/: reader.py
core/knowledge/: heuristics.py  signatures.py
core/report/: generator.py
core/tools/: archive_tool.py  base.py  binwalk_tool.py  die_tool.py  diff_tool.py  entropy_tool.py  frida_tool.py  ghidra.py  radare2.py  shellcode_tool.py  strings_tool.py  virustotal.py  yara_tool.py
docs/blog/: part1.md  part2.md
ghidra_scripts/: auto_analyze.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/analysis/[id]/: page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/app/register/: page.tsx
web/app/samples/: page.tsx
web/app/settings/: page.tsx
web/components/: AiPanel.tsx  DisassemblyView.tsx  EntropyChart.tsx  FindingsTable.tsx  FunctionExplorer.tsx  HexView.tsx  InspectPanel.tsx  Nav.tsx
web/lib/: api.ts
