[project]
name = "deshifro"
version = "0.1.0"
description = "Cybersecurity reverse engineering automation platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.24",
    "pefile>=2024.8.26",
    "python-magic-bin>=0.4.14",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
tools = [
    "yara-python>=4.5",
    "r2pipe>=1.9",
    "frida>=16.0",
    "binwalk>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]
all = ["deshifro[api,cli,tools,dev]"]

[project.scripts]
deshifro = "cli.main:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["core*", "api*", "cli*"]

[tool.ruff]
target-version = "py311"
line-length = 100
